[gd_scene load_steps=7 format=3 uid="uid://cbytrw00q60ge"]

[ext_resource type="Script" path="res://script/pantalla_de_inicio.gd" id="1_0bnp8"]
[ext_resource type="Texture2D" uid="uid://fra8yj52vb5b" path="res://art/title_with_text_pasma_in_the_wonderland_tim_bu.png" id="1_oaatn"]
[ext_resource type="FontFile" uid="uid://clwisbpne2e21" path="res://Pacifico-Regular.ttf" id="2_jgoe4"]
[ext_resource type="Script" path="res://script/Sprite2D.gd" id="4_qr7hm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efpi6"]
bg_color = Color(0.788235, 0.0588235, 0.14902, 1)
border_color = Color(0.8, 0.905882, 0.054902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y3jtj"]
bg_color = Color(0.788235, 0.0588235, 0.14902, 1)

[node name="pantalla de inicio" type="Node2D"]
script = ExtResource("1_0bnp8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TitleWithTextPasmaInTheWonderlandTimBu" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(480, 200)
scale = Vector2(0.35, 0.35)
texture = ExtResource("1_oaatn")

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 66.0
offset_top = 185.0
offset_right = 286.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("2_jgoe4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_efpi6")
text = "ADVERTENCIA"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 700.0
offset_top = 184.0
offset_right = 920.0
offset_bottom = 229.0
theme_override_fonts/font = ExtResource("2_jgoe4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_y3jtj")
text = "ADVERTENCIA"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer"]
visible = false
modulate = Color(0.870588, 0.85098, 0.129412, 1)
offset_left = 47.0
offset_top = 138.0
offset_right = 294.0
offset_bottom = 177.0
rotation = -0.401426
theme_override_fonts/font = ExtResource("2_jgoe4")
theme_override_font_sizes/font_size = 20
text = "apreta \"shift\" para comenzar."

[node name="Label5" type="Label" parent="CanvasLayer"]
visible = false
modulate = Color(0.870588, 0.85098, 0.129412, 1)
offset_left = 708.0
offset_top = 38.0
offset_right = 955.0
offset_bottom = 75.0
rotation = 0.401426
theme_override_fonts/font = ExtResource("2_jgoe4")
theme_override_font_sizes/font_size = 20
text = "apreta \"shift\" para comenzar."

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
script = ExtResource("4_qr7hm")
texto = "Para mover el personaje se pueden usar las flechas direccionales o \"wasd\".  Para interacturar \"shift\"."

[node name="Label2" type="Label" parent="CanvasLayer/Sprite2D"]
offset_left = 100.0
offset_top = 380.0
offset_right = 883.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("2_jgoe4")
theme_override_font_sizes/font_size = 25
vertical_alignment = 1
autowrap_mode = 3

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer4" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="CanvasLayer/Sprite2D" method="_on_timer_3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_timer_4_timeout"]
